# mailrocket

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
docs/: app-anatomy.md  directory-structure.md  technicalities.md  testing.md
src/: lib.rs  main.rs
tests/: greet.rs  health_check.rs
tests/common/: mod.rs
