[package]
name = "mailrocket"
version = "0.1.0"
author = ["Saurabh Mishra <saurabhm@proton.me>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "mailrocket"

[dependencies]
actix-web = "4.2.1"
env_logger = "0.9.3"
reqwest = "0.11.12"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
